--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/UniversidadGrupo33.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans 8.2\\profiler\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\Pablo\\Desktop\\Clases Desarrollo App Java\\Driver Conector MariaDB\\mariadb-java-client-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.2.0.jar}
+    ${file.reference.mariadb-java-client-3.2.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
