--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,17 +27,18 @@ dist.dir=dist
 dist.jar=${dist.dir}/UniversidadGrupo33.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans 8.2\\profiler\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Carpetas\\CACHO\\CURSO2022\\3erETAPA-GUIA2-INTERFASEgraficaGUI\\JCALENDAR-1.4\\lib\\jcalendar-1.4.jar
-file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\Pablo\\Desktop\\Clases Desarrollo App Java\\Driver Conector MariaDB\\mariadb-java-client-3.2.0.jar
-file.reference.mariadb-java-client-3.2.0.jar-1=C:\\Carpetas\\CACHO\\CURSO2022\\3erETAPA-GUIA4-PLAYLIST_Acceso a Datos con JDBC\\mariadb-java-client-3.2.0.jar
+file.reference.jcalendar-1.4.jar=../../../../../../Program Files/NetBeans 8.2/profiler/lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=../../../../../../Carpetas/CACHO/CURSO2022/3erETAPA-GUIA2-INTERFASEgraficaGUI/JCALENDAR-1.4/lib/jcalendar-1.4.jar
+file.reference.mariadb-java-client-3.2.0.jar=../../../../../Pablo/Desktop/Clases Desarrollo App Java/Driver Conector MariaDB/mariadb-java-client-3.2.0.jar
+file.reference.mariadb-java-client-3.2.0.jar-1=../../../../../../Carpetas/CACHO/CURSO2022/3erETAPA-GUIA4-PLAYLIST_Acceso a Datos con JDBC/mariadb-java-client-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.2.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mariadb-java-client-3.2.0.jar-1}
+    ${file.reference.mariadb-java-client-3.2.0.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
