--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 compile.on.save=true
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Pablo\\Desktop\\Clases Desarrollo App Java\\jcalendar-1.4.zip
 file.reference.mariadb-java-client-3.2.0.jar-1=C:\\Users\\Pablo\\Desktop\\Clases Desarrollo App Java\\mariadb-java-client-3.2.0.jar
-user.properties.file=C:\\Users\\Pablo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Multi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
