--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=../../../../../../Program Files/NetBeans 8.2/profiler/lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=../../../../../../Carpetas/CACHO/CURSO2022/3erETAPA-GUIA2-INTERFASEgraficaGUI/JCALENDAR-1.4/lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Carpetas\\CACHO\\CURSO2022\\3erETAPA-GUIA2-INTERFASEgraficaGUI\\JCALENDAR-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.2.0.jar=../../../../../Pablo/Desktop/Clases Desarrollo App Java/Driver Conector MariaDB/mariadb-java-client-3.2.0.jar
 file.reference.mariadb-java-client-3.2.0.jar-1=../../../../../../Carpetas/CACHO/CURSO2022/3erETAPA-GUIA4-PLAYLIST_Acceso a Datos con JDBC/mariadb-java-client-3.2.0.jar
+file.reference.mariadb-java-client-3.2.0.jar-2=C:\\Carpetas\\CACHO\\CURSO2022\\3erETAPA-GUIA4-PLAYLIST_Acceso a Datos con JDBC\\mariadb-java-client-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -38,7 +40,9 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mariadb-java-client-3.2.0.jar-1}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mariadb-java-client-3.2.0.jar-2}:\
+    ${file.reference.jcalendar-1.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
